// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trackey's track destination action: all fields 1`] = `
Object {
  "event": "Z8LFHc1gCw9y*5",
  "groupId": Object {
    "testType": "Z8LFHc1gCw9y*5",
  },
  "messageId": "Z8LFHc1gCw9y*5",
  "properties": Object {
    "testType": "Z8LFHc1gCw9y*5",
  },
  "timestamp": "Z8LFHc1gCw9y*5",
  "userId": "Z8LFHc1gCw9y*5",
}
`;

exports[`Testing snapshot for Trackey's track destination action: required fields 1`] = `
Object {
  "event": "Z8LFHc1gCw9y*5",
  "timestamp": "Z8LFHc1gCw9y*5",
  "userId": "Z8LFHc1gCw9y*5",
}
`;
